--- a/CardFileBooks/Web.Client/Web.Client.csproj
+++ b/CardFileBooks/Web.Client/Web.Client.csproj
@@ -167,6 +167,10 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="ConfigManager\CardFileBooksConfigManager.cs" />
+    <Compile Include="ConfigManager\Entity\AbstractConfigCollection.cs" />
+    <Compile Include="ConfigManager\Entity\ApiUrlsCollection.cs" />
+    <Compile Include="ConfigManager\ICardFileBooksConfigManager.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -178,6 +182,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="WebConfigSections\ApiUrlsElement.cs" />
+    <Compile Include="WebConfigSections\ApiUrlsElementCollection.cs" />
+    <Compile Include="WebConfigSections\ApplicationNameElement.cs" />
+    <Compile Include="WebConfigSections\CardFileBooksConfigurationSettingsSection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
