--- a/CardFileBooks/Web.Client/Web.config
+++ b/CardFileBooks/Web.Client/Web.config
@@ -25,9 +25,9 @@
 	</appSettings>
 	<cardFileBooksConfigSettings>
 		<applicationName value="Card File Books" />
-		<apiPaths hostUri="http://localhost:9010/">
-			<!--<add key="SignIn" value="/api/account/signin" />-->
-		</apiPaths>
+		<apiUrls host="http://localhost:9010/">
+			<add key="GetBooks" value="/api/Books" />
+		</apiUrls>
 	</cardFileBooksConfigSettings>
 	<system.web>
 		<authentication mode="None" />
